--- a/CSS/kaspar.css
+++ b/CSS/kaspar.css
@@ -276,7 +276,7 @@ nav ul li a:hover {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgb(0 0 0/60%);
 }
 
